fix haka-login button on mobile devices

--- a/frontend/src/components/footer/footer.scss
+++ b/frontend/src/components/footer/footer.scss
@@ -3,5 +3,10 @@
 footer {
   margin-top: 20px !important;
   margin-bottom: 20px !important;
+
+  img {
+    max-width: 100%;
+  }
+
 }
 
